# greeting_audio_vad

./: .gitignore  Dockerfile  audio_handler.py  config.py  config.yml  create_queries.sql  database.py  docker-compose.yml  drop_queries.sql  fast_api.py  launcher.py  main.py  model.py  pyproject.toml  singleton.py  utils.py  vad.py  worker.py
