[tool.poetry]
name = "vad_scanner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
webrtcvad = "^2.0.10"
requests = "^2.27.1"
psycopg2 = "^2.9.3"
fastapi = "^0.71.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
